--- a/GroupLockApplication/app/src/main/AndroidManifest.xml
+++ b/GroupLockApplication/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.sonya.grouplockapplication" >
-
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -18,6 +19,8 @@
         <activity android:name=".ChooseToDoActivity" >
         </activity>
         <activity android:name=".LibraryActivity" >
+        </activity>
+        <activity android:name=".ChooseFileActivity" >
         </activity>
     </application>
 
