--- a/GroupLockApplication/app/src/main/AndroidManifest.xml
+++ b/GroupLockApplication/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/typography_72x72"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
@@ -21,6 +21,8 @@
         <activity android:name=".LibraryActivity" >
         </activity>
         <activity android:name=".ChooseFileActivity" >
+        </activity>
+        <activity android:name=".ChooseFromLibraryActivity" >
         </activity>
     </application>
 
