#25: added layout and handlers stubs

--- a/GroupLockApplication/app/src/main/AndroidManifest.xml
+++ b/GroupLockApplication/app/src/main/AndroidManifest.xml
@@ -16,11 +16,17 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ChooseToDoActivity"
-            android:label="Home">
+        <activity
+            android:name=".ChooseToDoActivity"
+            android:label="Home" >
         </activity>
-        <activity android:name=".LibraryActivity" 
-                   android:label="Library">
+        <activity
+            android:name=".LibraryActivity"
+            android:label="Library" >
+        </activity>
+        <activity
+            android:name=".KeysTypeSelectionActivity"
+            android:label="@string/title_activity_keys_type_selection">
         </activity>
     </application>
 
