--- a/.travis.yml
+++ b/.travis.yml
@@ -1,29 +1,12 @@
 language: android
 android:
   components:
-    # Uncomment the lines below if you want to
-    # use the latest revision of Android SDK Tools
     - platform-tools
-    - tools
+    - build-tools-23.0.1
+    - android-23
 
-    # The BuildTools version used by your project
-    # - build-tools-19.1.0
-
-    # The SDK version used to compile your project
-    # - android-19
-
-    # Additional components
-    # - extra-google-google_play_services
-    # - extra-google-m2repository
-    # - extra-android-m2repository
-    # - addon-google_apis-google-19
-
-    # Specify at least one system image,
-    # if you need to run emulator(s) during your tests
-    # - sys-img-armeabi-v7a-android-19
-    # - sys-img-x86-android-17
-
-script: cd GroupLockApplication && gradle build connectedCheck
+script:
+   - ./GroupLockApplication/gradlew build connectedCheck
 
 notifications:
   slack: grouplock:dTkArNoCUeyRITfhTUwQAuBX
