--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_install:
 script:
    - cd GroupLockApplication
    - dir
-   - gradlew build connectedCheck
+   - ./gradlew build connectedCheck
 
 notifications:
   slack: grouplock:dTkArNoCUeyRITfhTUwQAuBX
