--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,8 @@ android:
     - build-tools-23.0.1
     - android-23
 
-#before_install:
- #- chmod +x ./GroupLockApplication/gradlew
+before_install:
+ - chmod +x ./gradlew
  #updates permissions for travis
 
 #notifications:
