--- a/.travis.yml
+++ b/.travis.yml
@@ -3,18 +3,16 @@ android:
   components:
     # Uncomment the lines below if you want to
     # use the latest revision of Android SDK Tools
-    # - platform-tools
-    # - tools
-
-    #- platform-tools
-    #- build-tools-23.0.1
-    #- android-23
+     - platform-tools
+     - tools
 
     # The BuildTools version used by your project
-    - build-tools-19.1.0
+    #- build-tools-19.1.0
+    #- build-tools-23.0.1
 
     # The SDK version used to compile your project
-    - android-19
+    #- android-19
+    #- android-23
 
     # Additional components
     #- extra-google-google_play_services
