--- a/.travis.yml
+++ b/.travis.yml
@@ -4,15 +4,15 @@ android:
     # Uncomment the lines below if you want to
     # use the latest revision of Android SDK Tools
      - platform-tools
-     - tools
-
+    # - tools
+     
     # The BuildTools version used by your project
     #- build-tools-19.1.0
-    #- build-tools-23.0.1
+    - build-tools-23.0.1
 
     # The SDK version used to compile your project
     #- android-19
-    #- android-23
+    - android-23
 
     # Additional components
     #- extra-google-google_play_services
@@ -29,6 +29,9 @@ before_install:
  - chmod +x ./gradlew
  #updates permissions for travis
 
+script:
+   - ./gradlew build connectedCheck
+   
 #notifications:
   #slack: grouplock:dTkArNoCUeyRITfhTUwQAuBX
   
