--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,13 @@ android:
 before_install:
  - chmod +x ./gradlew
  #updates permissions for travis
+ 
+ before_script:
+  # Create, start and wait for emulator
+  - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
+  - emulator -avd test -no-skin -no-audio -no-window &
+  - android-wait-for-emulator
+  - adb shell input keyevent 82 &
 
 script:
    - ./gradlew build connectedCheck
