--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,8 @@ before_install:
  
  before_script:
   # Create, start and wait for emulator
-  - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
+  # echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
+  - echo y | android update sdk -u -a -t android-23
   - emulator -avd test -no-skin -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
