--- a/.travis.yml
+++ b/.travis.yml
@@ -8,11 +8,13 @@ android:
      
     # The BuildTools version used by your project
     #- build-tools-19.1.0
-    - build-tools-23.0.1
-
+    #- build-tools-23.0.1
+    - build-tools-21.1.1
+  
     # The SDK version used to compile your project
     #- android-19
-    - android-23
+    #- android-23
+    - android-21
 
     # Additional components
     #- extra-google-google_play_services
@@ -29,13 +31,13 @@ before_install:
  - chmod +x ./gradlew
  #updates permissions for travis
  
- before_script:
+ #before_script:
   # Create, start and wait for emulator
   # echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
-  - echo y | android update sdk -u -a -t android-23
-  - emulator -avd test -no-skin -no-audio -no-window &
-  - android-wait-for-emulator
-  - adb shell input keyevent 82 &
+  #- echo y | android update sdk -u -a -t android-23
+  #- emulator -avd test -no-skin -no-audio -no-window &
+  #- android-wait-for-emulator
+  #- adb shell input keyevent 82 &
 
 script:
    - ./gradlew build connectedCheck
