--- a/GroupLock iOS/Podfile
+++ b/GroupLock iOS/Podfile
@@ -1,6 +1,5 @@
-# Uncomment this line to define a global platform for your project
-# platform :ios, '8.0'
-# Uncomment this line if you're using Swift
+source 'https://github.com/CocoaPods/Specs.git'
+
 use_frameworks!
 
 target 'GroupLock' do
