--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: objective-c
 osx_image: xcode7.3
-xcode_workspace: /GroupLock\ iOS/GroupLock.xcworkspace
+xcode_workspace: GroupLock iOS/GroupLock.xcworkspace
 xcode_scheme: GroupLock 
 xcode_sdk: iphonesimulator9.3
