--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,4 @@ osx_image: xcode7.3
 #xcode_scheme: GroupLock 
 #xcode_sdk: iphonesimulator9.0
 script:
- - xcodebuild -workspace GroupLock iOS/GroupLock.xcworkspace -scheme GroupLock -sdk iphonesimulator build test
+ - xcodebuild -workspace GroupLock\ iOS/GroupLock.xcworkspace -scheme GroupLock -sdk iphonesimulator build test
