--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,9 @@
 language: objective-c
 osx_image: xcode7.3
-#xcode_workspace: GroupLock iOS/GroupLock.xcworkspace
-#xcode_scheme: GroupLock 
-#xcode_sdk: iphonesimulator9.0
-script:
- - xcodebuild -workspace GroupLock\ iOS/GroupLock.xcworkspace -scheme GroupLock -sdk iphonesimulator build test
+install:
+  - brew update
+  - brew reinstall nvm xctool
+
+xcode_workspace: GroupLock iOS/GroupLock.xcworkspace
+xcode_scheme: GroupLock 
+xcode_sdk: iphonesimulator9.3
