--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,35 @@
 language: objective-c
-osx_image: xcode7.3
-install:
-  - brew update
-  - brew reinstall nvm xctool
 
-xcode_workspace: GroupLock iOS/GroupLock.xcworkspace
-xcode_scheme: GroupLock 
-xcode_sdk: iphonesimulator9.3
+# Раскомментировать, когда у Travis не будет проблем с xctool в среде xcode7.3
+# before_install:
+  # - brew update
+  # - brew uninstall xctool && brew install --HEAD xctool
+
+matrix:
+  include:
+  - osx_image: xcode7.3
+    env: DEVICE="iPhone 4s" VERSION=9.3
+  - osx_image: xcode7.3
+    env: DEVICE="iPhone 5s" VERSION=9.3
+  - osx_image: xcode7.3
+    env: DEVICE="iPhone 6s" VERSION=9.3
+  - osx_image: xcode7.3
+    env: DEVICE="iPhone 6s Plus" VERSION=9.3
+  - osx_image: xcode7.3
+    env: DEVICE="iPhone 4s" VERSION=9.0
+  - osx_image: xcode7.3
+    env: DEVICE="iPhone 5s" VERSION=9.0
+  - osx_image: xcode7.3
+    env: DEVICE="iPhone 6s" VERSION=9.0
+  - osx_image: xcode7.3
+    env: DEVICE="iPhone 6s Plus" VERSION=9.0
+  
+  
+# Раскомментировать, когда у Travis не будет проблем с xctool в среде xcode7.3
+# script:
+  # - xcodebuild -workspace GroupLock\ iOS/GroupLock.xcworkspace -scheme GroupLock -destination "platform=iOS Simulator,name=$DEVICE,OS=$VERSION"
+  # - xctool -sdk iphonesimulator -workspace GroupLock\ iOS/GroupLock.xcworkspace -scheme GroupLock -destination "platform=iOS Simulator,name=$DEVICE,OS=$VERSION" test
+  
+# Убрать, когда у Travis не будет проблем с xctool в среде xcode7.3
+script:
+  - xcodebuild -workspace GroupLock\ iOS/GroupLock.xcworkspace -scheme GroupLock -destination "platform=iOS Simulator,name=$DEVICE,OS=$VERSION" build test
