--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,9 @@ language: objective-c
   # - brew update
   # - brew uninstall xctool && brew install --HEAD xctool
 
+after_success:
+  - bash <(curl -s https://codecov.io/bash) -J 'GroupLock'
+
 matrix:
   include:
   - osx_image: xcode7.3
