UI Tests for the Password screen added.

--- a/GroupLockiOS/GroupLock.xcodeproj/xcshareddata/xcschemes/GroupLock.xcscheme
+++ b/GroupLockiOS/GroupLock.xcodeproj/xcshareddata/xcschemes/GroupLock.xcscheme
@@ -26,7 +26,8 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES" codeCoverageEnabled = "YES">>
+      shouldUseLaunchSchemeArgsEnv = "YES"
+      codeCoverageEnabled = "YES">
       <Testables>
          <TestableReference
             skipped = "NO">
@@ -81,6 +82,13 @@
             ReferencedContainer = "container:GroupLock.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <EnvironmentVariables>
+         <EnvironmentVariable
+            key = "PROJECT_DIR"
+            value = "$PROJECT_DIR"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+      </EnvironmentVariables>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
