--- a/.travis.yml
+++ b/.travis.yml
@@ -2,27 +2,35 @@ matrix:
   include:
 # For iOS builds:
   - language: objective-c
+    os: osx
     osx_image: xcode7.3
     env: DEVICE="iPhone 4s" VERSION=9.3 PLATFORM="iOS"
   - language: objective-c
+    os: osx
     osx_image: xcode7.3
     env: DEVICE="iPhone 5s" VERSION=9.3 PLATFORM="iOS"
   - language: objective-c
+    os: osx
     osx_image: xcode7.3
     env: DEVICE="iPhone 6s" VERSION=9.3 PLATFORM="iOS"
   - language: objective-c
+    os: osx
     osx_image: xcode7.3
     env: DEVICE="iPhone 6s Plus" VERSION=9.3 PLATFORM="iOS"
   - language: objective-c
+    os: osx
     osx_image: xcode7.3
     env: DEVICE="iPhone 4s" VERSION=9.0 PLATFORM="iOS"
   - language: objective-c
+    os: osx
     osx_image: xcode7.3
     env: DEVICE="iPhone 5s" VERSION=9.0 PLATFORM="iOS"
   - language: objective-c
+    os: osx
     osx_image: xcode7.3
     env: DEVICE="iPhone 6s" VERSION=9.0 PLATFORM="iOS"
   - language: objective-c
+    os: osx
     osx_image: xcode7.3
     env: DEVICE="iPhone 6s Plus" VERSION=9.0 PLATFORM="iOS"
 # For Android builds:
