--- a/GroupLockApplication/app/src/main/AndroidManifest.xml
+++ b/GroupLockApplication/app/src/main/AndroidManifest.xml
@@ -28,6 +28,9 @@
             android:name=".KeysTypeSelectionActivity"
             android:label="@string/title_activity_keys_type_selection">
         </activity>
+        <activity android:name=".SettingsActivity"
+            android:label="Settings">
+        </activity>
     </application>
 
 </manifest>
