#114: Pods shared for different targets.

--- a/.travis.yml
+++ b/.travis.yml
@@ -40,17 +40,14 @@ matrix:
       # components:
         # etc.
 
-podfile: GroupLockiOS/Podfile
-
 before_install:
   - sh -c "if [ '$PLATFORM' = 'iOS' ]; then sudo gem install xcpretty --no-rdoc --no-ri --no-document; fi"
-  - sh -c "if [ '$PLATFORM' = 'iOS' ]; then sudo gem install cocoapods; fi"
+  - sh -c "if [ '$PLATFORM' = 'iOS' ]; then sudo gem install cocoapods --no-rdoc --no-ri; fi"
   - sh -c "if [ '$PLATFORM' = 'iOS' ]; then pod setup; fi"
   - sh -c "if [ '$PLATFORM' = 'iOS' ]; then pod install --project-directory=GroupLockiOS; fi"
   # - sh -c "if [ '$PLATFORM' = 'Android' ]; then <# perform commands for Android build #>; fi"
 
 script:
-  - sh -c "if [ '$PLATFORM' = 'iOS' ]; then xcodebuild -alltargets clean; fi"
   - sh -c "if [ '$PLATFORM' = 'iOS' ]; then set -o pipefail && xcodebuild -workspace GroupLockiOS/GroupLock.xcworkspace -scheme GroupLock -destination \"platform=iOS Simulator,name=$DEVICE,OS=$VERSION\" build test | xcpretty; fi"
 # - sh -c "if [ '$PLATFORM' = 'Android' ]; then <# perform commands for Android build #>; fi"
 
