--- a/GroupLockApplication/app/build.gradle
+++ b/GroupLockApplication/app/build.gradle
@@ -1,3 +1,12 @@
+buildscript {
+    repositories {
+        jcenter() // or mavenCentral()
+    }
+
+    dependencies {
+        classpath 'com.android.tools.build:gradle:1.3.0'
+    }
+}
 apply plugin: 'com.android.application'
 
 android {
@@ -17,10 +26,17 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    lintOptions {
+        abortOnError false
+    }
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.1.0'
+    compile 'com.journeyapps:zxing-android-embedded:3.2.0@aar'
+    compile 'com.google.zxing:core:3.2.1'
+    compile files('D:/git/grouplock/GroupLockApplication/libs/zxing_core.jar')
+    compile files('D:/git/grouplock/GroupLockApplication/libs/core.jar')
 }
