--- a/GroupLockApplication/app/src/main/AndroidManifest.xml
+++ b/GroupLockApplication/app/src/main/AndroidManifest.xml
@@ -37,7 +37,12 @@
         </activity>
         <activity
             android:name=".NumberOfKeysActivity"
-            android:label="Step 3/6"></activity>
+            android:label="Step 3/6">
+        </activity>
+        <activity android:name=".QrReaderActivity"
+            android:label="QrReader">
+        </activity>
+
     </application>
 
 </manifest>
