--- a/GroupLockApplication/app/src/main/AndroidManifest.xml
+++ b/GroupLockApplication/app/src/main/AndroidManifest.xml
@@ -42,6 +42,10 @@
         <activity android:name=".QrReaderActivity"
             android:label="QrReader">
         </activity>
+        <activity android:name=".QrCreateActivity"
+            android:label="QrReader">
+        </activity>
+
 
     </application>
 
