--- a/GroupLockiOS/Podfile
+++ b/GroupLockiOS/Podfile
@@ -4,6 +4,7 @@ use_frameworks!
 
 def shared_pods
     pod 'NUI', :git => 'https://github.com/broadwaylamb/nui.git', :branch => 'grouplock'
+    pod 'JSQDataSourcesKit'
 end
 
 target 'GroupLock' do
