--- a/GroupLockiOS/Podfile
+++ b/GroupLockiOS/Podfile
@@ -5,6 +5,8 @@ use_frameworks!
 def shared_pods
     pod 'NUI', :git => 'https://github.com/broadwaylamb/nui.git', :branch => 'grouplock'
     pod 'JSQDataSourcesKit'
+    pod 'JSQCoreDataKit'
+    pod ''
 end
 
 target 'GroupLock' do
