Fix Podfile. Add a dependency.

--- a/GroupLockiOS/Podfile
+++ b/GroupLockiOS/Podfile
@@ -6,7 +6,7 @@ def shared_pods
     pod 'NUI', :git => 'https://github.com/broadwaylamb/nui.git', :branch => 'grouplock'
     pod 'JSQDataSourcesKit'
     pod 'JSQCoreDataKit'
-    pod ''
+    pod 'Agrume', :git => 'https://github.com/JanGorman/Agrume.git'
 end
 
 target 'GroupLock' do
