Шифрование и расшифровка bmp изображения
Алгоритм описан:
https://github.com/lanit-tercom-school/grouplock/wiki/%D0%90%D0%BB%D0%B3%D0%BE%D1%80%D0%B8%D1%82%D0%BC-%D1%88%D0%B8%D1%84%D1%80%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D1%8F-bmp-%D0%BD%D0%B0-java-%D0%B7%D0%B0%D0%B3%D0%BB%D1%83%D1%88%D0%BA%D0%B5

--- a/GroupLockApplication/app/src/main/AndroidManifest.xml
+++ b/GroupLockApplication/app/src/main/AndroidManifest.xml
@@ -48,6 +48,9 @@
         <activity android:name=".EncrImgAndQr"
             android:label="EncrImg">
         </activity>
+        <activity android:name=".DecrImg"
+            android:label="DecrImg">
+        </activity>
 
 
     </application>
