--- a/.codecov.yml
+++ b/.codecov.yml
@@ -1,9 +1,9 @@
 comment:
-  layout: header, changes, diff, sunburst
+  layout: header, changes, diff, tree, sunburst
 coverage:
   precision: 0
   round: down
-  range: "30...80"
+  range: "30...100"
   ignore:
   - GroupLockiOS/GroupLockTests/*
   status:
