#136: Migrate to Swift 3. Now it builds.

--- a/GroupLockiOS/Podfile
+++ b/GroupLockiOS/Podfile
@@ -4,9 +4,9 @@ use_frameworks!
 
 def shared_pods
     pod 'NUI', :git => 'https://github.com/broadwaylamb/nui.git', :branch => 'grouplock'
-    pod 'JSQDataSourcesKit'
-    pod 'JSQCoreDataKit'
-    pod 'Agrume', :git => 'https://github.com/JanGorman/Agrume.git'
+    pod 'JSQDataSourcesKit', :git => 'https://github.com/jessesquires/JSQDataSourcesKit.git', :branch => 'swift3.0'
+    pod 'JSQCoreDataKit', :git => 'https://github.com/jessesquires/JSQCoreDataKit.git', :branch => 'swift3.0'
+    pod 'Agrume', :git => 'https://github.com/JanGorman/Agrume.git’, :branch => 'swift/3.0'
 end
 
 target 'GroupLock' do
