--- a/GroupLockiOS/GroupLock/Info.plist
+++ b/GroupLockiOS/GroupLock/Info.plist
@@ -43,6 +43,10 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Choose files you want to encrypt or decrypt.</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Use camera to scan QR-codes containig decryption keys.</string>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
 </dict>
