Fixed input a few keys

--- a/GroupLockApplication/gradle/wrapper/gradle-wrapper.properties
+++ b/GroupLockApplication/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Mon Nov 09 20:19:55 MSK 2015
+#Fri Aug 19 11:43:18 KRAT 2016
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=gradle-2.2-all.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-2.10-all.zip
