--- a/GroupLockApplication/app/build.gradle
+++ b/GroupLockApplication/app/build.gradle
@@ -4,7 +4,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.3.0'
+        classpath 'com.android.tools.build:gradle:2.1.2'
     }
 }
 apply plugin: 'com.android.application'
@@ -37,6 +37,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.1.0'
     compile 'com.journeyapps:zxing-android-embedded:3.2.0@aar'
     compile 'com.google.zxing:core:3.2.1'
-    compile files('D:/git/grouplock/GroupLockApplication/libs/zxing_core.jar')
-    compile files('D:/git/grouplock/GroupLockApplication/libs/core.jar')
+ //   compile files('D:/git/grouplock/GroupLockApplication/libs/zxing_core.jar')
+ //   compile files('D:/git/grouplock/GroupLockApplication/libs/core.jar')
 }
