Create correct toolbar

--- a/GroupLockApplication/gradle.properties
+++ b/GroupLockApplication/gradle.properties
@@ -16,3 +16,4 @@
 systemProp.http.proxyHost=web-proxy.oa.com
 systemProp.http.nonProxyHosts=127.0.0.1
 systemProp.http.proxyPort=8080
+org.gradle.jvmargs=-XX\:MaxHeapSize\=512m -Xmx512m
