--- a/GroupLockApplication/app/build.gradle
+++ b/GroupLockApplication/app/build.gradle
@@ -39,4 +39,5 @@ dependencies {
     compile 'com.google.zxing:core:3.2.1'
  //   compile files('D:/git/grouplock/GroupLockApplication/libs/zxing_core.jar')
  //   compile files('D:/git/grouplock/GroupLockApplication/libs/core.jar')
+    compile 'com.google.android.gms:play-services-appindexing:8.1.0'
 }
