--- a/GroupLockiOS/Podfile
+++ b/GroupLockiOS/Podfile
@@ -2,11 +2,19 @@ source 'https://github.com/CocoaPods/Specs.git'
 
 use_frameworks!
 
+post_install do |installer|
+    installer.pods_project.targets.each do |target|
+        target.build_configurations.each do |config|
+            config.build_settings['SWIFT_VERSION'] = '3.0'
+        end
+    end
+end
+
 def shared_pods
     pod 'NUI', :git => 'https://github.com/broadwaylamb/nui.git', :branch => 'grouplock'
     pod 'JSQDataSourcesKit', :git => 'https://github.com/jessesquires/JSQDataSourcesKit.git', :branch => 'swift3.0'
     pod 'JSQCoreDataKit', :git => 'https://github.com/jessesquires/JSQCoreDataKit.git', :branch => 'swift3.0'
-    pod 'Agrume', :git => 'https://github.com/JanGorman/Agrume.git’, :branch => 'swift/3.0'
+    pod 'Agrume', :git => 'https://github.com/JanGorman/Agrume.git', :branch => 'swift/3.0'
 end
 
 target 'GroupLock' do
