--- a/GroupLockApplication/app/build.gradle
+++ b/GroupLockApplication/app/build.gradle
@@ -34,10 +34,13 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
+    compile 'com.android.support:support-v4:23.2.0'
+    compile 'com.android.support:design:23.2.0'
     compile 'com.android.support:appcompat-v7:23.1.0'
     compile 'com.journeyapps:zxing-android-embedded:3.2.0@aar'
     compile 'com.google.zxing:core:3.2.1'
  //   compile files('D:/git/grouplock/GroupLockApplication/libs/zxing_core.jar')
  //   compile files('D:/git/grouplock/GroupLockApplication/libs/core.jar')
     compile 'com.google.android.gms:play-services-appindexing:8.1.0'
+
 }
