--- a/GroupLockiOS/Podfile
+++ b/GroupLockiOS/Podfile
@@ -12,9 +12,9 @@ end
 
 def shared_pods
     pod 'NUI', :git => 'https://github.com/broadwaylamb/nui.git', :branch => 'grouplock'
-    pod 'JSQDataSourcesKit', :git => 'https://github.com/jessesquires/JSQDataSourcesKit.git', :branch => 'swift3.0'
-    pod 'JSQCoreDataKit', :git => 'https://github.com/jessesquires/JSQCoreDataKit.git', :branch => 'swift3.0'
-    pod 'Agrume', :git => 'https://github.com/JanGorman/Agrume.git', :branch => 'swift/3.0'
+    pod 'JSQDataSourcesKit'
+    pod 'JSQCoreDataKit'
+    pod 'Agrume', :git => 'https://github.com/JanGorman/Agrume.git'
 end
 
 target 'GroupLock' do
