--- a/GroupLockCrypto/CMakeLists.txt
+++ b/GroupLockCrypto/CMakeLists.txt
@@ -15,11 +15,15 @@ message(STATUS "Current system: ${CMAKE_SYSTEM_NAME} (${CMAKE_SYSTEM})")
 # =================== PROJECT SETTINGS =====================
 
 # Set directory with source files
-set(SOURCE_ROOT "${PROJECT_SOURCE_DIR}/Source")
+set(SOURCE_ROOT "${PROJECT_SOURCE_DIR}/Sources")
 
 # Specify source files
 aux_source_directory(${SOURCE_ROOT} SOURCES)
 file(GLOB HEADERS "${SOURCE_ROOT}/*.h")
+
+# Build targets
+set(LIBRARY_TARGET_NAME "${PROJECT_NAME}")
+set(TEST_TARGET_NAME "${PROJECT_NAME}_TestRunner")
 
 # ================== IMPORTED LIBRARIES ====================
 
@@ -43,12 +47,29 @@ include_directories("${PROJECT_SOURCE_DIR}/${IMPORTED_LIBS}/include")
 add_library(${IMPORTED_LIBS} STATIC IMPORTED)
 set_property(TARGET ${IMPORTED_LIBS} PROPERTY IMPORTED_LOCATION "${PROJECT_SOURCE_DIR}/${IMPORTED_LIBS}/${CMAKE_SYSTEM_NAME}/${IMPORTED_LIBS}.${STATIC_LIBRARY_EXTENSION}")
 
+# ========================= CUNIT ==========================
+
+# CUnit is a lightweight unit testing library for C.
+include_directories("${PROJECT_SOURCE_DIR}/cunit/include")
+add_library(cunit STATIC IMPORTED)
+set_property(TARGET cunit PROPERTY IMPORTED_LOCATION "${PROJECT_SOURCE_DIR}/cunit/${CMAKE_SYSTEM_NAME}/libcunit.${STATIC_LIBRARY_EXTENSION}")
+
 # ========================= OUTPUT =========================
 
 # Add output static library target
-add_library(${PROJECT_NAME} STATIC ${SOURCES} ${HEADERS})
-add_executable(${PROJECT_NAME}-main ${SOURCES} ${HEADERS})
+add_library(${LIBRARY_TARGET_NAME} STATIC ${SOURCES} ${HEADERS})
 
 # Link with external libraries
-target_link_libraries(${PROJECT_NAME} ${IMPORTED_LIBS})
-target_link_libraries(${PROJECT_NAME}-main ${IMPORTED_LIBS})
+target_link_libraries(${LIBRARY_TARGET_NAME} ${IMPORTED_LIBS})
+
+# ======================== TESTING =========================
+
+set(TESTS_ROOT "${PROJECT_SOURCE_DIR}/Tests")
+set(TEST_SUPPORTING_FILES ${TESTS_ROOT}/main.c ${TESTS_ROOT}/utils.c ${TESTS_ROOT}/suites.h)
+aux_source_directory(${TESTS_ROOT}/suites TESTS)
+
+# Add test target
+add_executable(${TEST_TARGET_NAME} ${TEST_SUPPORTING_FILES} ${TESTS})
+include_directories(${SOURCE_ROOT})
+include_directories(${TESTS_ROOT})
+target_link_libraries(${TEST_TARGET_NAME} ${LIBRARY_TARGET_NAME} cunit)
