--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ matrix:
     os: osx
     env: DEVICE="iPhone 7 Plus" VERSION=10.1 TARGET="iOS"
 # For C/C++ library builds:
-  - language: cpp
+  - language: c
     os: osx
     compiler: clang
     env: TARGET="Lib"
@@ -39,6 +39,7 @@ script:
   - if [[ $TARGET == "iOS" ]] ; then
       set -o pipefail && xcodebuild -workspace GroupLockiOS/GroupLock.xcworkspace -scheme GroupLock -destination "platform=iOS Simulator,name=$DEVICE,OS=$VERSION" build test | xcpretty; fi
   - if [[ $TARGET == "Lib" ]] ; then
+      brew install cmake;
       cd GroupLockCrypto/Build && cmake .. && make;
       ./glcrypto_TestRunner;
     fi
