--- a/.travis.yml
+++ b/.travis.yml
@@ -36,15 +36,23 @@ before_install:
       gem install cocoapods --no-rdoc --no-ri;
       pod install --project-directory=GroupLockiOS --repo-update;
     fi
+  - if [[ $TARGET == "Lib" && $TRAVIS_OS_NAME == "osx" ]] ; then
+      brew install cmake;
+    elif [[ $TARGET == "Lib" && $TRAVIS_OS_NAME == "linux" ]]; then
+      sudo apt-get remove cmake;
+      sudo apt-get remove cmake-data;
+      sudo apt-get install software-properties-common;
+      sudo add-apt-repository ppa:george-edison55/cmake-3.x;
+      sudo apt-get update;
+      sudo apt-get install cmake;
+    fi
+
 
 script:
   - if [[ $TARGET == "iOS" ]] ; then
       set -o pipefail && xcodebuild build test -workspace GroupLockiOS/GroupLock.xcworkspace -scheme GroupLock -sdk $SDK -destination "OS=$VERSION,name=$DEVICE" -configuration Debug ONLY_ACTIVE_ARCH=NO CODE_SIGNING_REQUIRED=NO | xcpretty -c;
       sleep 10;
       set -o pipefail && xcodebuild test -workspace GroupLockiOS/GroupLock.xcworkspace -scheme GroupLock -sdk $SDK -destination "OS=$VERSION,name=$DEVICE" -configuration Debug ONLY_ACTIVE_ARCH=NO CODE_SIGNING_REQUIRED=NO | xcpretty -c;
-    fi
-  - if [[ $TRAVIS_OS_NAME == "osx" ]] ; then
-      brew install cmake;
     fi
   - if [[ $TARGET == "Lib" ]] ; then
       cd GroupLockCrypto/Build && cmake .. && make;
