--- a/.travis.yml
+++ b/.travis.yml
@@ -39,12 +39,12 @@ before_install:
   - if [[ $TARGET == "Lib" && $TRAVIS_OS_NAME == "osx" ]] ; then
       brew install cmake;
     elif [[ $TARGET == "Lib" && $TRAVIS_OS_NAME == "linux" ]]; then
-      sudo apt-get remove cmake;
-      sudo apt-get remove cmake-data;
-      sudo apt-get install software-properties-common;
-      sudo add-apt-repository ppa:george-edison55/cmake-3.x;
-      sudo apt-get update;
-      sudo apt-get install cmake;
+      sudo apt-get -y remove cmake;
+      sudo apt-get -y remove cmake-data;
+      sudo apt-get -y install software-properties-common;
+      sudo add-apt-repository -y ppa:george-edison55/cmake-3.x;
+      sudo apt-get -y update;
+      sudo apt-get -y install cmake;
     fi
 
 
