--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,13 @@ matrix:
     os: linux
     compiler: gcc
     env: TARGET="Lib"
+    addons:
+      apt:
+        sources:
+          - george-edison55-precise-backports
+        packages:
+          - cmake
+          - cmake-data
 
 before_install:
   - if [[ $TARGET == "iOS" ]] ; then
@@ -38,13 +45,6 @@ before_install:
     fi
   - if [[ $TARGET == "Lib" && $TRAVIS_OS_NAME == "osx" ]] ; then
       brew install cmake;
-    elif [[ $TARGET == "Lib" && $TRAVIS_OS_NAME == "linux" ]]; then
-      sudo apt-get -y remove cmake;
-      sudo apt-get -y remove cmake-data;
-      sudo apt-get -y install software-properties-common;
-      sudo add-apt-repository -y ppa:george-edison55/cmake-3.x;
-      sudo apt-get -y update;
-      sudo apt-get -y install cmake;
     fi
 
 
